client/src/pages/Home.css
/* .background {
    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('../assets/images/fish-background-2.png');
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    z-index: 0;
    min-width: 100vw;
    min-height: 100vh;
} */

.icon {
    height: 250px;
    margin: 50px;
}

.about{
    color: whitesmoke;
    font-size: 20px;
}

.mobile {
    height: 500px;
}

.web {
    height: 350px;
}

.holder {
    justify-content: center;
}

.teamHeader {
    color: whitesmoke;
}

